# Modelen

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: export_scenario.py  pyproject.toml  requirements.txt  run.sh
backend/app/: __init__.py  hook_manager.py  logit_lens.py  main.py  model_manager.py  schemas.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/scenarios/: code_completion.json  france_capital.json  index.json  largest_planet.json  number_comparison.json  simple_ioi.json  simple_math.json
frontend/src/: App.tsx  StaticApp.tsx  index.css  main.tsx  types.ts
frontend/src/components/: ActivationStats.tsx  ActivationTrace.tsx  AttentionMap.tsx  CausalTracingPanel.tsx  DiffView.tsx  ExampleGallery.tsx  InterventionPanel.tsx  LogitLensView.tsx  MemoryDisplay.tsx  PromptTemplates.tsx  StaticDemo.tsx  ThemeToggle.tsx  TokenDisplay.tsx  Tutorial.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useApi.ts  useKeyboardShortcuts.ts  useShareableLink.ts
